fix: modal visibility in small devices

--- a/src/Components/Reusable/Modals/modal.css
+++ b/src/Components/Reusable/Modals/modal.css
@@ -1,10 +1,3 @@
-/*Create Room Form */
-form {
-  width: 90%;
-  /* border: 1px solid #ccc; */
-  /* border-radius: 5px; */
-}
-
 .modal {
   width: 100%;
   position: fixed;
